# ssearcher

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  Makefile.am  README.md  buffer.c  buffer.h  common.mk  config.h  configure.ac  debug.h  file.c  file.h  magic.c  magic.c.tmpl  magic.h  magic_defs  main.c  match.c  match.h  options.c  options.h  pool.h  sf.mk  ss.mk  ss_buffer.c  ss_buffer.h  ss_config.h  ss_debug.h  ss_file.c  ss_file.h  ss_magic.c  ss_magic.c.tmpl  ss_magic.h  ss_main.c  ss_match.c  ss_match.h  ss_options.c  (+12 more)
snippet/: file-mt.c  filemagic  filemagic.c  pool.h  test_pool.c
snippets/: Makefile  file-mt.c  filemagic.c  lcrq.c  rules.mk  test_pipe.c  test_pool.c  test_trie.c  test_worker.c  trie.c  trie.h
src/: buffer.c  buffer.h  config.h  debug.h  kmp.c  magic.c  magic.c.tmpl  magic.h  magic_defs  main.c  match.c  options.c  options.h  patmatch.c  patmatch.h  pool.c  pool.h  rules.mk  thread.c
test/: rules.mk  test-all.pl  test_buf.cpp  test_match.cpp  test_rope.cpp  test_trie.cpp
tests/: rules.mk  test_trie.cpp
utils/: gen_magic_header.pl
